# ChangeLog for dev-java/maven-repository-metadata
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 May 2007; kiorky <kiorky@cryptelium.net>
  +maven-repository-metadata-2.0.6.ebuild, +files/build-2.0.6.xml,
  +metadata.xml:
  Added as a maven dependency, #177493
