@@ -1,6 +1,6 @@
 AUX build-2.0.xml 5758 RMD160 ab9cff824ec3be9ed3248b13410633af33478ff2 SHA1 8db124e3fe9c8edf03f50bf2e87aa0704cd3915b SHA256 50f5a6e42e4c33053e93befac071b4aff708f7c922c39eff12ec70bb95c285de
 DIST maven-repository-metadata-2.0.tar.bz2 5918 RMD160 8a16fbe9068289db4f5070cc8ac594b705973073 SHA1 b4ceb27f4975c3f35ecf9a803ecd848f39e7ec63 SHA256 1f6c0c03043e88ecd387b2f8362a863804b2d9b08a88d6394a53dd9666720647
 DIST maven-repository-metadata-gen-src-2.0.tar.bz2 7013 RMD160 f3ab25de7e4ca3386a89e064f844b7d832f0a38d SHA1 2d659b5512498325d8555e6e42f239625e8562c4 SHA256 7ac57948728996eb4d0da57538a6c9cf32ee1e54397da371f449fce042b0da83
-EBUILD maven-repository-metadata-2.0.ebuild 477 RMD160 ed59dcf49093d9a8da22c026a9e7427c9645eb90 SHA1 67a871f8f43649fba368ad010fcbf92616ae8f3d SHA256 d4a88cff555c1dda98c446ec2f451f692f82697e23f74923afe3c7012a4f99d3
-MISC ChangeLog 305 RMD160 31b40a395196cbfea67ab7ce1742be950e72251a SHA1 18792229ce44e61a7148b846396420df5d9f3ff8 SHA256 eee3a2cacb66bf8660e85fe800de565f8d7e0f71a650a8839db597459d96e911
+EBUILD maven-repository-metadata-2.0.ebuild 566 RMD160 d5f59397233df7cad6f1e34824e83297ded289d3 SHA1 c1d326989d28978d229279cbe0cfcdae99f5ea76 SHA256 f056f02e09e52133eb0f64c8b2491b4f93d2177c1b39a4b1ac1e22ce4f8f23ea
+MISC ChangeLog 439 RMD160 56327ec507f07a40bb86578f7a503e4c29a52fee SHA1 6cda50888b0a74ba55cfd3ba62aa9a1bb25404d0 SHA256 842d4885a39d120714ff530fd1057956208e219ca468222a1757ddcffb027476
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
