@@ -2,6 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+JAVA_PKG_IUSE="source" #no javadoc target
 IS_MODELLO_EBUILD="y"
 inherit java-maven-2
 
@@ -9,10 +10,12 @@ DESCRIPTION="Maven is a software project management and comprehension tool."
 HOMEPAGE="http://maven.apache.org/"
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS="~x86"
-IUSE="source doc"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
 DEP="dev-java/plexus-utils"
 DEPEND=">=virtual/jdk-1.4 ${DEP}"
 RDEPEND=">=virtual/jre-1.4 ${DEP}"
 EANT_GENTOO_CLASSPATH="plexus-utils"
 
+RESTRICT=test
+JAVA_PKG_SRC_DIRS="src/main/java/*"
